[tool.poetry]
name = "repl-nix-the-final"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_the_final"}]

[tool.poetry.dependencies]
python = "^3.10"
wtforms = "^3.1.2"
flask-mail = "^0.9.1"
flask-cors = "^4.0.1"
requests = "^2.31.0"
crypto = "^1.4.1"
flask = "^3.0.3"
flask-wtf = "^1.2.1"
sqlalchemy = "^2.0.30"
flask-login = "^0.6.3"
werkzeug = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
itsdangerous = "^2.2.0"
flask-session = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
